fix until background

--- a/bachelor_thesis.tex
+++ b/bachelor_thesis.tex
@@ -74,17 +74,17 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 %\vspace{30mm}
 \vspace{30mm}
 
-{\Large\bf A Regional Food's Features Extraction Algorithm}\\ 
+{\Large\bf A Regional Food's Feature-Ingredient Recognition}\\ 
 %HUSTLE: Deploying A Secure Wireless Sensor Network 
 %by Light Communication with Smartphone\vspace{5mm}
-{\Large\bf and Its Application}\\
+{\Large\bf Algorithm and Its Application}\\
 \vspace{3mm}
 %\vspace{3mm}
 
 %\vspace{2cm}
 \vspace{10mm}
 
-{\LARGE Trung Duc Nguyen }\\
+{\LARGE Nguyen Trung Duc}\\
 %\vspace{2cm}
 \vspace{10mm}
 {\Large Faculty of Environment and Information Studies}\\
@@ -105,7 +105,7 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 
 \textbf{{\Large Advisors:}}\\
 \vspace{5mm}
-{\Large Professor Kiyoki Yasushi}\\
+{\Large Professor Yasushi Kiyoki}\\
 \vspace{2mm}
 {\Large Diep Nguyen-Thi Ngoc}\\
 \vspace{2mm}
@@ -114,7 +114,7 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 %\vspace{1.5cm}
 \vspace{12mm}
 
-{\large Copyright\copyright  2014 Trung Duc Nguyen}
+{\large Copyright\copyright  2014 Nguyen Trung Duc }
 
 \end{center}
 
