--- a/contents/abstract.tex
+++ b/contents/abstract.tex
@@ -4,7 +4,7 @@
 {\bf Abstract of Bachelor's Thesis} \\
 
 \vspace{5mm}
-{\bf A Regional Food's Features Extraction Algorithm\\ and Its Application}
+{\bf A Regional Food's Feature-Ingredient Recognition\\ Algorithm and Its Application}
 
 \end{Large}
 \end{center}
@@ -14,11 +14,11 @@
 \vspace{0.4cm}
 %Advantages
 Automatically detecting food's taste is a non-trivial part. However, we realize that the taste of food can be extracted by directly analyzing recipes by the ingredients and the amount of them in the recipes. 
-In this paper, we present a food analysis system to discover the taste of foods and to better understand the featured ingredients in each specific geographical region. The main features of this system are (1) to extract dominant ingredients and tastes in a region by analyzing the ingredients' frequency and its uniqueness, and (2) to transform user's existing materials or original recipe to a new recipe according to a targeted taste. To examine the feasibility and applicability of the algorithm, we have developed a web-based application with a recipe database collected from approximately 200 recipes in over 8 regions of Japan: Hokkaido-Tohoku, Kanto, Kansai, Shikoku, Tyubu, Kyusyu-Okinawa and Tyugoku. 
+In this thesis, we present a food analysis system to discover the taste of foods and to better understand the featured ingredients in each specific geographical region. The main features of this system are (1) to extract dominant ingredients and tastes in a region by analyzing the ingredients' frequency, amount and uniqueness, and (2) to transform user's existing materials or original recipe to a new recipe according to a targeted taste. The  ingredients' frequency, amount and uniqueness are treated as meta data in our system. We also propose a fast updating meta data on change of the database by using the old meta data. To examine the feasibility and applicability of the algorithm, we have developed a web-based application with a recipe database collected from approximately 200 recipes in 8 regions of Japan: Hokkaido, Tohoku, Kanto, Kansai, Shikoku, Tyubu, Kyusyu and Tyugoku. 
 \vspace{-2.5mm}
 
 \begin{flushright}
-{\bf Trung Duc Nguyen}\\
+{\bf Nguyen Trung Duc}\\
 %\vspace{2mm}
 %\vspace{2mm}
 \vspace{-2mm}
