--- a/contents/application.tex
+++ b/contents/application.tex
@@ -182,7 +182,7 @@ In Fig.~\ref{fig:your_recipe}, there are two recipes registered by user. User so
 \centering
 \includegraphics[scale=0.5]{your_recipe.eps}
 \caption{Page shows your own recipes.}
-\label{fig:precipitous}
+\label{fig:your_recipe}
 \end{figure}
 
 To register their own recipes, users can use the interface shown in Fig.~\ref{fig:register_recipe}.
