edit until related

--- a/contents/ack.tex
+++ b/contents/ack.tex
@@ -1,19 +1,19 @@
 \chapter*{Acknowledgments}
 
-Foremost, I would like to express my sincere gratitude to my advisor Prof.Yasushi Kiyoki for the continuous support of my bachelor study and research, for his patience, motivation, enthusiasm, and immense knowledge since I joined Multimedia Database Laboratory. His guidance helped me in all the time of research and writing of this thesis. I could not have imagined having a better advisor and mentor for my bachelor.
+Foremost, I would like to express my sincere gratitude to my supervisor Prof.Yasushi Kiyoki for the continuous support of my bachelor study and research, for his patience, motivation, enthusiasm, and immense knowledge since I joined Multimedia Database Laboratory. His guidance helped me in all the time of research and writing of this thesis. I could not have imagined having a better advisor and mentor for my bachelor.
 
-I would like to thank my advisor, Mrs.Nguyen Thi Ngoc Diep who has always taken care of me since I joined Multimedia Databse Laboratory. She gave me a lot of advice and support when I am not sure about my research motivations. 
+I would like to thank my advisor, Ms.Nguyen Thi Ngoc Diep, who has always taken care of me since I joined Multimedia Databse Laboratory. She gave me a lot of advices and supports when I am not sure about my research motivations. 
 
-I would like to thank Dr.Sashiori Sasaki and Mr.Jeremy as well for their encouragement, insightful comments, and hard questions\ldots
+I would like to thank Ms.Sasaki and Mr.Jeremy as well for their encouragement, insightful comments, and hard questions\ldots
 
 I thank to the members of Multimedia Database Laboratory for their great friendship and supports.
 
-I would like to thank to Mr.Burgin and Mr.Loyld for checking my English writings.
+I would like to thank to Mr.Burgin and Mr.Lloyd for checking my English writings.
 
-Last but not the least, I would like to thank my family: my parents Nguyen Trung Dung and Bui Thi Thuy Lan, for giving birth to me at the first place and supporting me spiritually throughout my life. I am also grateful to my friends in Japan who have helped me a lot to start a new life in Japan. 
+Last but not the least, I would like to thank my family: my parents Mr.Nguyen Trung Dung and Mrs.Bui Thi Thuy Lan, for giving birth to me at the first place and supporting me spiritually throughout my life. I am also grateful to my friends in Japan who have helped me a lot to start a new life in Japan. 
 
 \begin{flushright}
 \today
 
-Trung Duc Nguyen 
+Nguyen Trung Duc 
 \end{flushright}
