--- a/contents/background.tex
+++ b/contents/background.tex
@@ -1,6 +1,6 @@
 \chapter{Background}\label{chap:bg}
 
-\section{Computer aid cooking activities}
+\section{Computer Aid Cooking Activities}
 
 Cooking and eating have been the most fundamental activities of humankind since the days of trading caravans in the ancient days until now, which affect various aspects of human life such as health, dietary, human communication, safety of food, entertainment, culinary art, welfare, and so on. However, many people who cook at home require supports for cooking because it requires experience and knowledge. They may also need support for food-logging and menu planning for the health of their family. Needless to say, support for a good and enjoyable dinner would improve the quality of life. On the other hand, systematic cooking and eating support for the elderly and/or physically challenged people are significantly important.
 
